# Qt_meteo_get_log

./: CMakeLists.txt  main.cpp  uartcontroller.cpp  uartcontroller.h
